Fixed for select state spacing on teaser component.

--- a/missingkids/less/css/application.css
+++ b/missingkids/less/css/application.css
@@ -9384,7 +9384,7 @@ body.fixed-breadcrump .header-container .navbar .container .secondary-header .so
   padding-right: 16px;
 }
 .select-state {
-  padding: 0 0 16px 0;
+  padding: 16px 0 0;
 }
 .select-state select {
   border: 0;
